Implement selectable firmware profiles
